Closed Bug 1718748 Opened 3 years ago Closed 3 years ago

[Ubuntu] Changing to dark theme mode makes the customization footer buttons visible only after mouse hover

Categories

(Core :: Widget: Gtk, defect)

Firefox 91
x86_64
Linux
defect

Tracking

()

VERIFIED FIXED
91 Branch
Tracking Status
firefox-esr78 --- unaffected
firefox89 --- unaffected
firefox90 --- unaffected
firefox91 --- verified
firefox92 --- verified

People

(Reporter: gmoldovan, Assigned: emilio)

References

(Regression)

Details

(Keywords: regression)

Attachments

(3 files)

Affected versions:

  • Nightly 91.0a1

Affected platforms:

  • Ubuntu 20.04.2 LTS

Unaffected platforms:

  • Windows 10x64
  • macOs 10.15

Steps to reproduce:

  1. Launch Firefox.
  2. Go to Customize toolbar (Hamburger menu → More tools → Customize toolbar).
  3. On the lower part of the page click on the Themes button and select Dark theme from the list.

Expected result:
All customization footer buttons are clearly visible.

Actual result:
Customization footer buttons are not visible until you hover over them.

Regression range:
This is a regression:

Additional notes
Screen cast attached to observe the issue.

Hi Emilio,

It seems that mozregression pointed out Bug 1717077 for causing this regression.

Can you please take a look?

Thanks!

Has Regression Range: --- → yes
Has STR: --- → yes
Flags: needinfo?(emilio)
See Also: → 1718755

Set release status flags based on info from the regressing bug 1717077

Assignee: nobody → emilio
Flags: needinfo?(emilio)

Otherwise nothing invalidates for the potential theme change that it
causes on GTK / macOS with dark-mode enabled.

Pushed by ealvarez@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/bc079cbb02ff
Ensure that changing browser.theme.toolbar-theme triggers an style/layout update. r=stransky
Status: NEW → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 91 Branch
Flags: qe-verify+

I managed to reproduce the issue using Nightly from 2021-06-30 on Ubuntu 18.04 x64.
I retested everything on Latest Nightly 92.0a1 and Firefox 91.0b7 using the same os. The issue is not reproducing anymore. However there is a bit of a delay on beta that is not reproducing on Nightly.

Flags: needinfo?(emilio)

That is expected in beta since beta doesn't have the patches here.

Flags: needinfo?(emilio)

According to comment 6 and comment 7 I will mark this bug as verified fixed.

Status: RESOLVED → VERIFIED
Flags: qe-verify+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: