Bug 1718748 - Ensure that changing browser.theme.toolbar-theme triggers an style/layout update. r=stransky

Otherwise nothing invalidates for the potential theme change that it
causes on GTK / macOS with dark-mode enabled.

Differential Revision: https://phabricator.services.mozilla.com/D119022